PB-25934: fix Range component design on firefox

--- a/src/less/components/range.less
+++ b/src/less/components/range.less
@@ -74,6 +74,7 @@
         padding: 0;
         transform: translateX(-50%);
         cursor: pointer;
+        white-space: nowrap;
 
         &:hover {
           font-weight: 700;
